--- a/buildpack.toml
+++ b/buildpack.toml
@@ -1,10 +1,10 @@
 api = "0.4"
 
 [buildpack]
-id = "fagiani/apt"
+id = "tyatin/apt"
 version = "0.2.5"
 name = "apt Packages Buildpack"
-homepage = "https://github.com/fagiani/apt-buildpack"
+homepage = "https://github.com/2rba/apt-buildpack"
 description = "Installs apt packages for further builds and runtime"
 keywords = ["apt", "packages", "ubuntu"]
 
@@ -12,13 +12,7 @@ keywords = ["apt", "packages", "ubuntu"]
 type = "MIT"
 
 [[stacks]]
-id = "heroku-18"
-
-[[stacks]]
 id = "heroku-20"
-
-[[stacks]]
-id = "io.buildpacks.stacks.bionic"
 
 [[stacks]]
 id = "io.buildpacks.stacks.jammy"
